Fix more edge cases in URLParser https://bugs.webkit.org/show_bug.cgi?id=162051

Reviewed by Tim Horton.

Source/WebCore:

Added new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):
Some edge case handling was wrong. Also, some of the terminal states are not possible
to reach because we transition to those states without incrementing the iterator.

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206035 268f45cc-cd09-0410-ab3c-d52691b4dbfc